fixed images on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -135,6 +135,9 @@ span {
 	background-color: #f7f7f7;
 	color: $font-color;
 	text-align: center;
+	img {
+		width: 100%;
+	}
 	.shadow {
 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	}
